--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -58,15 +58,14 @@
       <% @all_events.each do |event| %>
         <div data-controller="swipe" class="md:flex md:items-center md:flex-row-reverse relative overflow-hidden md:overflow-visible">
           <div class="absolute md:static z-0 inset-0 flex items-center justify-end md:gap-2">
-            <button data-role="editButton" class="w-19 h-16 md:w-6 md:h-6 text-white transition duration-200 ease-in-out 
-            box-content hover:border-x-2 hover:border-x-blue-500">
+            <%= link_to edit_countdown_event_path(event), class: "w-19 h-16 md:w-6 md:h-6 text-white transition duration-200 ease-in-out box-content hover:border-x-2 hover:border-x-blue-500" do %>
               <!-- モバイル -->
               <span class="flex md:hidden bg-gray-500 w-full h-full items-center justify-center">edit</span>
               <!-- PC -->
               <span class="hidden md:block md:rounded-4xl hover:shadow-md">
                 <%= image_tag "pen.svg" %>
               </span>
-            </button>
+            <% end %>
             <%= link_to countdown_event_path(event), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"w-19 h-16 md:w-6 md:h-6 text-white transition duration-200 ease-in-out 
             box-content hover:border-x-2 hover:border-x-blue-500" do %>
               <!-- モバイル -->
