--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,6 +7,7 @@
     <% end %>
 <% end %>
 <main class="grow lg: max-w-lg w-full mx-auto pt-10 lg:pt-20 px-2">
+  <%= render 'shared/error_messages', object: @event %>
   <%= form_with model:@event, url:countdown_events_path, method: :post, local: true, html: { class: "px-6 shadow rounded py-4 w-full" } do |f| %>
     <div class="mb-6">
       <%= f.label :event_name, "Event name", class: "block text-gray-700 font-medium mb-2" %>
@@ -47,13 +48,13 @@
       <label class="block text-gray-700 font-medium mb-2">
         Category
       </label>
-      <div class="flex space-x-4" data-controller="countdown">
+      <div class="flex space-x-4" data-controller="icon-button">
         <% EventType.all.each do |et| %>
             <button 
                 type="button" 
                 data-event-type-id="<%= et.id %>"
-                data-countdown-target="iconButton"
-                data-action="click->countdown#selectIcon"
+                data-icon-button-target="iconButton"
+                data-action="click->icon-button#selectIcon"
                 aria-pressed="false" 
                 class="p-2 border border-gray-300 rounded hover:bg-gray-100 focus:outline-none [&[aria-pressed='true']]:bg-blue-500 [&[aria-pressed='true']]:text-white" >
                 <%= image_tag("icons/#{et.icon_filename}", alt: "icon", class:"size-6") %>
@@ -61,7 +62,7 @@
         <% end %>
         <%= f.hidden_field :event_type_id, 
             value: @event.event_type_id,
-            data: { countdown_target: "eventTypeId" } 
+            data: { icon_button_target: "eventTypeId" } 
         %>
       </div>
     </div>
