--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,21 +13,21 @@
       <div>
         <div class="flex justify-center h-20 items-center gap-4">
           <div class="h-12 w-12">
-            <%= image_tag "icons/#{@top_event.event_type.icon_filename}" %>
+            <%= image_tag "icons/#{@event.event_type.icon_filename}" %>
           </div>
           <div class="text-3xl md:text-4xl lg:text-5xl text-center">
-            <%= @top_event.event_name %>
+            <%= @event.event_name %>
           </div>
         </div>
         <div class="flex justify-end text-gray-500">
           <span class="text-sm">
-            date: <%= @top_event.event_day.strftime("%Y %b %d") %>
+            date: <%= @event.event_day.strftime("%Y %b %d") %>
           </span>
         </div>
       </div>
       <div class="text-center">
         <span class="text-7xl lg:text-8xl">
-          <%= (@top_event.event_day - Date.current).to_i %>
+          <%= (@event.event_day - Date.current).to_i %>
         </span>
         <span class="text-xl">days</span>
       </div>
@@ -37,7 +37,7 @@
             <%= form.text_area :content, class: "w-full p-2 md:p-4 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500", rows: 2, placeholder: "Enter your comment" %>
             <%= form.hidden_field :commenter, value: ["Alice", "Bob"].sample %>
             <%= form.hidden_field :comment_date, value: Date.current %>
-            <%= form.hidden_field :event_id, value: @top_event.id %>
+            <%= form.hidden_field :event_id, value: @event.id %>
           </div>
           <div class="text-right">
             <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none">
@@ -46,14 +46,26 @@
           </div>
         <% end %>
         <div class="mt-5 border-t border-gray-200 pt-4 space-y-3 md:space-y-4 max-h-38 lg:max-h-50 overflow-auto">
-          <% @top_event.comments.each do |comment| %>
-            <div class="p-3 bg-gray-50 rounded shadow">
-              <p class="text-sm text-gray-800">
-                <span class="font-bold">
-                  <%= comment.commenter %> : 
-                </span>
-                <%= comment.content %>
-              </p>
+          <% prev_date = nil %>
+          <% @event.comments.each do |comment| %>
+            <% if prev_date != comment.created_at.to_date %>
+              <div class=" text-xs text-gray-500 m-0.5">
+                <%= comment.created_at.strftime("%Y %b %d") %>
+              </div>
+            <% end %>
+            <% prev_date = comment.created_at.to_date %>
+            <div class="flex justify-between space-x-2">
+              <div class="p-3 bg-gray-50 rounded shadow grow">
+                <p class="text-sm text-gray-800">
+                  <span class="font-bold">
+                    <%= comment.commenter %> : 
+                  </span>
+                  <%= comment.content %>
+                </p>
+              </div>
+              <div class="grow-0 text-xs text-gray-500 self-end">
+                <%= comment.created_at.strftime("%H:%M") %>
+              </div>
             </div>
           <% end %>
         </div>
@@ -83,27 +95,31 @@
               </span>
             <% end %>
           </div>
-          <li 
-            data-swipe-target="item"
-            data-action="touchstart->swipe#touchStart touchmove->swipe#touchMove touchend->swipe#touchEnd"
-            class="md:flex-1 z-10 p-4 bg-white active:bg-blue-200 hover:bg-blue-300 transform transition-transform duration-300 ">
-            <div class="flex justify-between h-10 items-center">
-              <div class="h-6 w-6">
-                <%= image_tag "icons/#{event.event_type.icon_filename}" %>
+          <%= link_to countdown_event_path(event), class: "block w-full h-full" do %>
+            <li 
+              data-swipe-target="item"
+              data-action="touchstart->swipe#touchStart touchmove->swipe#touchMove touchend->swipe#touchEnd"
+              class="md:flex-1 z-10 p-4 bg-white active:bg-blue-200 hover:bg-blue-300 transform transition-transform duration-300 ">
+              <div class="flex justify-between h-10 items-center">
+                <div class="h-6 w-6">
+                  <%= image_tag "icons/#{event.event_type.icon_filename}" %>
+                </div>
+                <div class="text-sm"><%= event.event_name %></div>
+                <div class="text-lg"><%= (event.event_day - Date.current).to_i %></div>
               </div>
-              <div class="text-sm"><%= event.event_name %></div>
-              <div class="text-lg"><%= (event.event_day - Date.current).to_i %></div>
-            </div>
-            <div class="mt-1">
-              <div class="w-full h-0.5 bg-gray-200 relative">
-                <% total_days = (event.event_day - event.created_at.to_date).to_i %>
-                <% remaining_days = (event.event_day - Date.current).to_i %>
-                <% progress_percentage = total_days > 0 ? (remaining_days.to_f / total_days * 100).round : 0 %>
-                <!-- 素のdivで書くとERB内のRubyコードを静的解析しようとしてエラーになるのでcontent_tagヘルパーを使う -->
-                <%= content_tag :div, "", class: "h-0.5 bg-blue-400", style: "width: #{progress_percentage}%;"%>
+              <div 
+                class="mt-1"
+                data-controller="progress-bar"
+                data-progress-bar-event-day-value="<%= event.event_day.strftime('%Y-%m-%d') %>"
+                data-progress-bar-created-at-value="<%= event.created_at.to_date.strftime('%Y-%m-%d') %>"
+                data-progress-bar-duration-value="900"
+              >
+                <div class="w-full h-0.5 bg-gray-200 relative">
+                  <div data-progress-bar-target="bar" class="h-0.5 bg-blue-400"></div>
+                </div>
               </div>
-            </div>
-          </li>
+            </li>
+          <% end %>
         </div>
       <% end %>
     </ul>
