--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,11 @@
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
     </svg>
   <% end %>
-<% end %>
+  <%= button_to "Logout",
+      logout_path,
+      data: { turbo: false },
+      class: "ml-4 text-md px-3 py-2" %>
+  <% end %>
 
 <main class="grow overflow-auto grid grid-cols-1 lg:grid-cols-4 gap-1 lg:gap-3 mt-4 pt-6">
   <div class="col-span-full lg:col-span-3 flex justify-center">
@@ -35,7 +39,7 @@
         <%= form_with model: Comment.new, url: countdown_comments_path, method: :post, local: true do |form| %>
           <div class="mb-4">
             <%= form.text_area :content, class: "w-full p-2 md:p-4 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500", rows: 2, placeholder: "Enter your comment" %>
-            <%= form.hidden_field :commenter, value: ["Alice", "Bob"].sample %>
+            <%= form.hidden_field :commenter, value: "#{session[:current_user]['uid']}" %>
             <%= form.hidden_field :comment_date, value: Date.current %>
             <%= form.hidden_field :event_id, value: @event.id %>
           </div>
